--- a/app/templates/operation-view.html
+++ b/app/templates/operation-view.html
@@ -537,7 +537,7 @@
 		<script src="{% static 'assets/plugins/datatable/js/dataTables.bootstrap5.js'%}"></script>
 		<script src="{% static 'assets/plugins/datatable/dataTables.responsive.min.js'%}"></script>
 
-		<!-- PROJECT-DETAILS JS-->
+		<!-- OPERATION-VIEW JS-->
 		<script src="{% static 'assets/js/operation-view.js'%}"></script>
 
         <!-- COLOR THEME JS -->
