--- a/app/templates/parcelle-details.html
+++ b/app/templates/parcelle-details.html
@@ -3049,6 +3049,7 @@
 
 		<!-- Parcelle-DETAILS JS-->
 		<script src="{% static 'assets/js/parcelle-details.js'%}"></script>
+		<script src="{% static 'assets/js/parcelle-details-map.js'%}"></script>
 
         <!-- COLOR THEME JS -->
         <script src="{% static 'assets/js/themeColors.js'%}"></script>
