--- a/app/templates/project-modifier.html
+++ b/app/templates/project-modifier.html
@@ -3,7 +3,16 @@
 
     {% block styles %}
 	<link rel="stylesheet" href="{% static 'assets/plugins/bootstrap-datepicker/css/datepicker.css' %}">
-
+	<style>
+		.leaflet-popup-content {
+		  width: 450px;
+		}
+		#map {
+			width: 100%;
+			height: 100vh;
+			box-shadow: 0 0 10px rgba(0,0,0,0.5);
+		}
+	</style>
     {% endblock %}
     
         {% block content %}
@@ -98,23 +107,83 @@
 													</div>
 												</div>
 											</div>
-											<div class="row p-5">
-												<div class="btn-list text-end">
-													<button class="btn btn-outline-danger">
-														<i class="fe fe-x-circle"></i>
-														Cancel
-													</button>
-													<button class="btn btn-primary">
-														<i class="fe fe-check-circle"></i>
-														Save
-													</button>
-												</div>
-											</div>
 										</div>
 									</div>
 								</div>
 							</div>
 							<!--ROW CLOSED-->
+
+							<!-- ROW OPENED-->
+							<div class="row">
+								<div class="col-md-12">
+									<div class="card">
+										<div class="card-header border-bottom">
+											<h3 class="card-title">Emplacement du Projet</h3>
+										</div>
+										<div class="card-body pb-0">
+
+											<div id="map">
+												<!-- Map coordinate  -->
+												<div class="leaflet-control map-coordinate">
+													<div class="coordinate"></div>
+												</div>
+											</div>
+												<!-- leaflet js  -->
+												<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+												<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+												<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+												<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+												<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js"></script>
+												<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+												<script src="{% static './lib/leaflet.markercluster.js' %}"></script>
+												<script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+												<script src="{% static './data/test.js' %}"></script>
+												<script src="{% static './dist/main.js' %}"></script>
+												<script src="{% static './dist/web-GIS.js' %}"></script>
+					
+												<!-- leaflet draw plugin  -->
+												<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.css"/>
+												<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/0.4.2/leaflet.draw.js"></script>
+												
+												<script>
+													// Initialize the map
+													var mapcenter = [51.505, -0.09];  // Default map center if no points are provided
+													var map = L.map('map', {zoomControl: false}).setView(mapcenter, 11);
+												
+													// Base layers
+													var googleSat = L.tileLayer('http://{s}.google.com/vt/lyrs=s&x={x}&y={y}&z={z}', {
+														maxZoom: 20,
+														subdomains: ['mt0', 'mt1', 'mt2', 'mt3']
+													}).addTo(map);
+												
+													var googleStreets = L.tileLayer('http://{s}.google.com/vt/lyrs=m&x={x}&y={y}&z={z}', {
+														maxZoom: 20,
+														subdomains: ['mt0', 'mt1', 'mt2', 'mt3']
+													});
+												
+													L.control.layers({
+														"Satellite": googleSat,
+														"Street": googleStreets
+													}).addTo(map);
+												</script>
+										</div> 
+									</div>
+								</div>
+							</div>
+							<!--ROW CLOSED-->
+							
+							<div class="row p-5">
+								<div class="btn-list text-end">
+									<button class="btn btn-outline-danger">
+										<i class="fe fe-x-circle"></i>
+										Cancel
+									</button>
+									<button class="btn btn-primary">
+										<i class="fe fe-check-circle"></i>
+										Save
+									</button>
+								</div>
+							</div>
 
         {% endblock %}
 
